bpo-28518: Start a transaction implicitly before a DML statement (#245)

Patch by Aviv Palivoda.